fix issue with unintended visible y axis scrollbar

--- a/src/css/common.css
+++ b/src/css/common.css
@@ -38,7 +38,6 @@
   padding: 0px;
   width: 100%;
   overflow-x: hidden;
-  overflow-y: scroll;
 }
 
 .common-component-width {
